Fixed offline widget so it account for browser window size on resize, not overflowing the widget with items.

--- a/static/css/core.less
+++ b/static/css/core.less
@@ -234,8 +234,14 @@ text-align:left;
 
 /* Offline
 -------------------------------------------------- */
-#offlineCarousel .item a:not(:first-child) {
-    margin-left: 2em;
+#offlineCarousel {
+    text-align: center;
+    
+    .item {
+        a:not(:first-child) {
+            margin-left: 2em;
+        }
+    }
 }
 
 /* Navbar
